# proofy-python

./: .gitignore  .pre-commit-config.yaml  ASYNC_IMPLEMENTATION_PLAN.md  ASYNC_USAGE_EXAMPLES.md  ENV_SETUP.md  LICENSE  README.md  codecov.yml  proofy.config.template  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: benchmark.yml  ci.yml  dependencies.yml  release.yml
examples/: conftest_run_attributes.py
proofy-commons/: README.md  pyproject.toml
proofy-commons/proofy/: __init__.py  api.py  decorators.py  utils.py
proofy-commons/proofy/_impl/: config.py
proofy-commons/proofy/_impl/context/: __init__.py  backend.py  models.py  service.py
proofy-commons/proofy/_impl/export/: attachments.py
proofy-commons/proofy/_impl/hooks/: specs.py
proofy-commons/proofy/_impl/io/: __init__.py  artifact_uploader.py  background_workers.py  concurrent_processor.py  results_handler.py
proofy-commons/proofy/_impl/uploader/: __init__.py  queue.py  worker.py
proofy-commons/proofy/_internal/: __init__.py  config.py  constants.py
proofy-commons/proofy/_internal/artifacts/: __init__.py  service.py  uploader.py
proofy-commons/proofy/_internal/context/: service.py
proofy-commons/proofy/_internal/logger/: __init__.py  httpx_logging.py  logging.py
proofy-commons/proofy/_internal/results/: limits.py  publishers.py  result_handler.py  utils.py
proofy-commons/proofy/_internal/uploader/: queue.py  worker.py
proofy-commons/proofy/config/: __init__.py
proofy-commons/proofy/core/: __init__.py  api.py  client.py  config.py  decorators.py  logging_scopes.py  models.py  system_info.py
proofy-commons/proofy/core/client/: __init__.py  async_client.py  base.py  sync_client.py
proofy-commons/proofy/export/: __init__.py  attachments.py
proofy-commons/proofy/hooks/: __init__.py  manager.py  specs.py
proofy-commons/proofy/runtime/: __init__.py  api.py  context.py  decorators.py
proofy-commons/tests/: test_api.py  test_attachment_service.py  test_attachments.py  test_background_workers.py  test_client.py  test_concurrent_processor.py  test_context_service.py  test_enhanced_results_handler.py  test_hooks.py  test_limits.py  test_models.py  test_result_handler.py  test_run_attributes.py  test_runtime.py
proofy-playwright/: Implementation.md
pytest-proofy/: README.md  pyproject.toml
pytest-proofy/pytest_proofy/: __init__.py  config.py  plugin.py  utils.py  xdist_support.py
pytest-proofy/tests/: conftest.py  test_attachments_integration.py  test_config.py  test_pluggy_hooks.py  test_plugin_basic.py  test_pytester_plugin.py  test_xdist_e2e.py  test_xdist_functional.py  test_xdist_integration.py
