[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofy-commons"
version = "0.1.0"
description = "Shared components for Proofy Python testing framework integrations"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Proofy Team", email = "team@proofy.io" },
]
license = { text = "MIT" }
keywords = ["testing", "proofy", "commons", "shared"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.31.0",
    "pluggy>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=4.1",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[tool.setuptools]
packages = ["proofy"]
