[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofy-commons"
version = "0.1.0"
description = "Shared components for Proofy Python testing framework integrations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Proofy Team", email = "team@proofy.io" },
]
license = { text = "MIT" }
keywords = ["testing", "proofy", "commons", "shared"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.31.0",
    "pluggy>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "coverage[toml]>=7.0",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[tool.coverage.run]
source = ["proofy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_any_generics = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_unreachable = false
strict_equality = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pluggy.*"
ignore_missing_imports = true

[tool.setuptools]
packages = ["proofy"]
