[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-proofy"
version = "0.1.0"
description = "Pytest plugin for Proofy test reporting"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Proofy Team", email = "team@proofy.io" },
]
license = { text = "MIT" }
keywords = ["pytest", "testing", "proofy", "reporting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.2",
    "proofy-commons>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1",
    "coverage[toml]>=7.0",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[tool.coverage.run]
source = ["pytest_proofy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[project.entry-points.pytest11]
proofy = "pytest_proofy.plugin"

[tool.setuptools]
packages = ["pytest_proofy"]
